--- a/module/Cartas/view/cartas/recepcion/listado.phtml
+++ b/module/Cartas/view/cartas/recepcion/listado.phtml
@@ -53,7 +53,7 @@
      <td><?php echo $this->escapeHtml($fe_recepcion->getFe_rec_compania());?></td>
      <td><?php echo $this->escapeHtml($fe_recepcion->getFe_rec_oferente());?></td>
      <td><?php echo $this->escapeHtml($fe_recepcion->getFe_rec_oferta_codigo());?></td>
-     <td><?php echo $this->escapeHtml($fe_recepcion->getFe_rec_fecha_hora()) . ':' . $this->escapeHtml($fe_recepcion->getFe_rec_fecha_minuto()) . ' / ' . $this->escapeHtml($fe_recepcion->getFe_rec_fecha_anio()) . ' - ' . $this->escapeHtml($fe_recepcion->getFe_rec_fecha_mes()) . ' - ' . $this->escapeHtml($fe_recepcion->getFe_rec_fecha_dia());?></td>
+     <td><?php echo $this->escapeHtml($fe_recepcion->getFe_rec_fecha_anio()) . '-' . $this->escapeHtml($fe_recepcion->getFe_rec_fecha_mes()) . '-' . $this->escapeHtml($fe_recepcion->getFe_rec_fecha_dia()) . ' / ' . $this->escapeHtml($fe_recepcion->getFe_rec_fecha_hora()) . ':' . $this->escapeHtml($fe_recepcion->getFe_rec_fecha_minuto())?></td>
      <td>
      	<?php 
      	$estado = $fe_recepcion->getFe_rec_estado();
