Change-Id: If30eccc806ca7ffd80c081a0a80edbdb9254c9fd

--- a/module/Contactos/view/contactos/index/ingresar.phtml
+++ b/module/Contactos/view/contactos/index/ingresar.phtml
@@ -498,10 +498,10 @@ echo $this->formelementerrors ( $con_estado );
 			}
 		}
 
-		<?php if(sizeof($detalles)<=0): for ($i=0; $i<10; $i++):?>
+		<?php for ($i=0; $i<10; $i++):?>
 			codigoCiudadSelect(<?php echo $i ?>);
 			
-		<?php endfor; endif; ?>
+		<?php endfor;  ?>
 
 	});
 </script>
