--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -55,7 +55,7 @@ echo $this->headScript ()
 	<div class="container-content-layout hidden-xs">&nbsp;</div>
 	<div class="container-content-layout-xs visible-xs">&nbsp;</div>
 	<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <?php echo $this->content; ?>
+            <?php echo $this->content; //ejemplo ?>
             
             <?php if(isset($this->mensaje) && !is_null($this->mensaje)):?>
             <div class="container">
