--- a/module/Usuarios/view/usuarios/usuarios/add.phtml
+++ b/module/Usuarios/view/usuarios/usuarios/add.phtml
@@ -1,7 +1,7 @@
  <?php
  // module/Empresas/view/empresas/empresas/add.phtml:
 
- $title = 'Ingresar una Nueva Empresa';
+ $title = 'Asociar Usuario';
  $this->headTitle($title);
 
  ?>
@@ -9,7 +9,7 @@
 	<div class="col-md-12">
  <table cellspacing="0" cellpadding="0" border="0" align="left" width="100%">
 	<tr>
-		<td width="50" valign="middle"><img src="<?php echo $this->basepath() . '/img/png/empresas_grande.png'?>" border="0" /></td>
+		<td width="50" valign="middle"><img src="<?php echo $this->basepath() . '/img/png/usuarios_grande.png'?>" border="0" /></td>
 		<td class="titulo_menu_item_pages"><span class="titulo_modulo_pages"><?php echo $this->escapeHtml($title); ?></span><br />Registre toda la información solicitada para ingresar un nuevo usuario.</td>
 	</tr>
 	<tr>
