--- a/module/Cartas/view/cartas/cartas/cartabancaria.phtml
+++ b/module/Cartas/view/cartas/cartas/cartabancaria.phtml
@@ -86,6 +86,49 @@
     			<div style="text-align: justify;"><?php echo $this->carta->getCtr_cuerpo()?></div>
     		</td>
     	</tr>
+    	
+    	<?php $detalle = $this->transaccion_bancaria->getTra_ban_detalle(); if(strtoupper($detalle) == 'S'):?>
+    	<tr>
+    		<td colspan="2">
+				<table width="100%" border="0">
+					<tr>
+						<td width="130"><b>Beneficiario: </b></td>
+						<td><?php echo $this->transaccion_bancaria->getTra_ban_beneficiario()?></td>
+					</tr>
+					<tr>
+						<td><b>Direcci&oacute;n Beneficiario: </b></td>
+						<td><?php echo $this->transaccion_bancaria->getTra_ban_direccion()?></td>
+					</tr>
+					<tr>
+						<td><b>Cuenta No.: </b></td>
+						<td><?php echo $this->transaccion_bancaria->getTra_ban_cuenta()?></td>
+					</tr>
+					<tr>
+						<td><b>Valor: </b></td>
+						<td><?php echo $this->transaccion_bancaria->getTra_ban_valor()?></td>
+					</tr>
+					<tr>
+						<td><b>ABA No: </b></td>
+						<td><?php echo $this->transaccion_bancaria->getTra_ban_aba()?></td>
+					</tr>
+					<tr>
+						<td><b>Nombre del Banco: </b></td>
+						<td><?php echo $this->transaccion_bancaria->getTra_ban_banco()?></td>
+					</tr>
+					<tr>
+						<td>&nbsp;</td>
+						<td><?php echo $this->transaccion_bancaria->getTra_ban_banco_linea_dos()?></td>
+					</tr>
+					<tr>
+						<td>&nbsp;</td>
+						<td><?php echo $this->transaccion_bancaria->getTra_ban_banco_direccion()?></td>
+					</tr>
+				</table>    		
+    		</td>
+    	</tr>
+    	<?php endif; ?>
+    	
+    	
    		<tr>
     		<td colspan="2">
     			<div><br /><br /><?php echo $this->carta->getCtr_despedida()?><br /><br /><br /></div>
