Modulo Cartas y Contactos
Change-Id: Idcadf95f37dc976fd54cdcd5faaf3ff5771a82e9

--- a/module/Cartas/view/cartas/cartas/ingresar.phtml
+++ b/module/Cartas/view/cartas/cartas/ingresar.phtml
@@ -206,7 +206,7 @@ echo $this->formelementerrors ( $proyecto_oculto );
 						  echo html_entity_decode( $this->formelementerrors ( $cargo_uno ) );
 					?>
 					</td>
-					<td>
+					<td style="display: none;">
 					<?php echo $formLabel->openTag() . $car_fir_tipo->getLabel() . $formLabel->closeTag();
 					      echo html_entity_decode( $this->formcheckbox ( $car_fir_tipo ) );
 						  echo html_entity_decode( $this->formelementerrors ( $car_fir_tipo ) ); 
