--- a/module/Cartas/view/cartas/cartas/cartaformal.phtml
+++ b/module/Cartas/view/cartas/cartas/cartaformal.phtml
@@ -1,4 +1,7 @@
-<?php echo $this->doctype(); $idioma = $this->carta->getCtr_idioma();?>
+<?php 
+use Parametros\Funciones\Funciones;
+$funciones = new Funciones();
+echo $this->doctype(); $idioma = $this->carta->getCtr_idioma();?>
 <html>
     <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -22,7 +25,7 @@
 <table cellspacing="0" cellpadding="10" border="0" width="70%" align="center">
     <tr>
         <td colspan="2">
-        	<div>Quito D.M, <?php echo date('d') . ' de ' . date('M') . ' de ' . date('Y')?></div>
+        	<div>Quito D.M <?php echo $funciones->translateAndFormatDate($this->carta->getCtr_fecha_creacion(), $this->carta->getCtr_idioma(), 'd-M-Y')?></div>
         	<div><?php echo $this->carta->getCtr_codigo_final()?></div>
         </td>
     </tr>
